qtquickcontrols-opensource-src (5.2.1-2) UNRELEASED; urgency=medium


 -- Debian Qt/KDE Maintainers <debian-qt-kde@lists.debian.org>  Thu, 27 Feb 2014 16:23:30 +0400

qtquickcontrols-opensource-src (5.2.1-1) experimental; urgency=medium

  * New upstream release.
  * Bump Qt build dependencies.

 -- Lisandro Damián Nicanor Pérez Meyer <lisandro@debian.org>  Sun, 16 Feb 2014 18:23:56 -0300

qtquickcontrols-opensource-src (5.2.0-2) unstable; urgency=medium

  * Upload to unstable.
  * Update Standards-Version to 3.9.5, no changes required.

 -- Lisandro Damián Nicanor Pérez Meyer <lisandro@debian.org>  Fri, 31 Jan 2014 20:57:48 -0300

qtquickcontrols-opensource-src (5.2.0-1) experimental; urgency=low

  * New upstream release.
  * Bump build dependencies, removing libqt5v8-5-private-dev which is no
    longer used.

 -- Lisandro Damián Nicanor Pérez Meyer <lisandro@debian.org>  Fri, 13 Dec 2013 22:34:11 -0300

qtquickcontrols-opensource-src (5.1.1-2) unstable; urgency=low

  * Rename libqt5qml-quickcontrols to qtdeclarative5-controls-plugin to
    maintain consistency with other packages.
    - Create a dummy package libqt5qml-quickcontrols depending on
      qtdeclarative5-controls-plugin.
    - Add proper Breaks+Replaces to qtdeclarative5-controls-plugin.
    - Rename .install and .lintian-override files.
    - Make qtdeclarative5-quicklayouts-plugin depend on the new package.
  * Fix the description of the layouts plugin package.
  * The Controls module depends on the Layouts one. Swap the dependencies
    (Closes: #725161).

 -- Lisandro Damián Nicanor Pérez Meyer <lisandro@debian.org>  Thu, 24 Oct 2013 19:42:01 -0300

qtquickcontrols-opensource-src (5.1.1-1) unstable; urgency=low

  * New upstream release.
  * Tighten Qt 5 build dependencies.
  * Clean up some copyright stuff:
    - Fix path to snippets under BSD-3-clause.
  * Use years intervals in FSF's copyright for qquerytransformparser.cpp.