@@ -1,0 +1,2 @@
+usr/share/qt5/doc/qtquickcontrols.qch
+usr/share/qt5/doc/qtquicklayouts.qch
