@@ -1,5 +1,7 @@
 qtquickcontrols-opensource-src (5.2.1-2) UNRELEASED; urgency=medium
 
+  [ Dmitry Shachnev ]
+  * Build the documentation packages.
 
  -- Debian Qt/KDE Maintainers <debian-qt-kde@lists.debian.org>  Thu, 27 Feb 2014 16:23:30 +0400
 
